# symmetrical-palm-tree

./: Cargo.toml  readme.md
documentation/: main.tex  references.bib
src/: main.rs
