[package]
name = "ant_tsp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tsplib = "0.1.0"
ndarray = "0.15.6"
random_choice = "0.3.2"
rayon = "1.7.0"
ndarray-stats = "0.5.1"
rand = "0.8.5"
fastrand = "2.0.0"

[profile.release]
opt-level = 3
debug = false
# split-debuginfo = '...'  # Platform-specific.
debug-assertions = false
overflow-checks = false
lto = true
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false
strip = true

